Ignore lint failures on Emacs 24.2 and below
Otherwise spurious errors like

  "semantic-imenu-summary-function" doesn't start with package's prefix "package-lint"
  "hack-local-variables--warned-lexical" doesn't start with package's prefix "package-lint"

make the test runner fail, even though these defvars are merely forward
declarations, not actual definitions.

Lint failures on Emacs 24.3+ still are considered test failures.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_install:
   - evm install $EVM_EMACS --use --skip
 
 env:
-  - EVM_EMACS=emacs-24.1-travis
-  - EVM_EMACS=emacs-24.2-travis
+  - EVM_EMACS=emacs-24.1-travis EMACS_LINT_IGNORE=1
+  - EVM_EMACS=emacs-24.2-travis EMACS_LINT_IGNORE=1
   - EVM_EMACS=emacs-24.3-travis
   - EVM_EMACS=emacs-24.4-travis
   - EVM_EMACS=emacs-24.5-travis
