--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: ruby
+language: emacs-lisp
 
 before_install:
   - git clone https://github.com/rejeep/evm.git $HOME/.evm
@@ -6,6 +6,11 @@ before_install:
 
   - evm config path /tmp
   - evm install $EVM_EMACS --use --skip
+
+  # Use cask to install development dependencies
+  - git clone https://github.com/cask/cask.git $HOME/.cask
+  - export PATH=$HOME/.cask/bin:$PATH
+  - cask
 
 env:
   - EVM_EMACS=emacs-24.1-travis EMACS_LINT_IGNORE=1
