--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,21 @@ install:
   - bash <(curl https://raw.githubusercontent.com/purcell/nix-emacs-ci/master/travis-install)
 
 env:
-  - EMACS_CI_VERSION=emacs-24-2 EMACS_LINT_IGNORE=1
-  - EMACS_CI_VERSION=emacs-24-3
-  - EMACS_CI_VERSION=emacs-24-4
-  - EMACS_CI_VERSION=emacs-24-5
-  - EMACS_CI_VERSION=emacs-25-1
-  - EMACS_CI_VERSION=emacs-25-2
-  - EMACS_CI_VERSION=emacs-25-3
-  - EMACS_CI_VERSION=emacs-26-1
-  - EMACS_CI_VERSION=emacs-26-2
-  - EMACS_CI_VERSION=emacs-26-3
-  - EMACS_CI_VERSION=emacs-snapshot
+  - EMACS_CI=emacs-24-2 EMACS_LINT_IGNORE=1
+  - EMACS_CI=emacs-24-3
+  - EMACS_CI=emacs-24-4
+  - EMACS_CI=emacs-24-5
+  - EMACS_CI=emacs-25-1
+  - EMACS_CI=emacs-25-2
+  - EMACS_CI=emacs-25-3
+  - EMACS_CI=emacs-26-1
+  - EMACS_CI=emacs-26-2
+  - EMACS_CI=emacs-26-3
+  - EMACS_CI=emacs-snapshot
 
 matrix:
   allow_failures:
-    - env: EMACS_CI_VERSION=emacs-snapshot
+    - env: EMACS_CI=emacs-snapshot
 
 script:
   ./run-tests.sh
