--- a/.github/workflows/stdlib-changes.yml
+++ b/.github/workflows/stdlib-changes.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: ${{ github.head_ref }}
     - uses: cachix/install-nix-action@v10
     - uses: cachix/cachix-action@v6
       with:
