--- a/.github/workflows/stdlib-changes.yml
+++ b/.github/workflows/stdlib-changes.yml
@@ -11,12 +11,12 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: ${{ github.head_ref }}
-    - uses: cachix/install-nix-action@v10
-    - uses: cachix/cachix-action@v6
+    - uses: cachix/install-nix-action@v12
+    - uses: cachix/cachix-action@v8
       with:
         name: emacs-ci
     - run: tools/sym-dump-all
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: Regenerate stdlib-changes
-        file-pattern: data/stdlib-changes
+        file_pattern: data/stdlib-changes
