--- a/.github/workflows/stdlib-changes.yml
+++ b/.github/workflows/stdlib-changes.yml
@@ -11,6 +11,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         ref: ${{ github.head_ref }}
+    - uses: cachix/install-nix-action@v25
     - run: tools/sym-dump-all
     - uses: stefanzweifel/git-auto-commit-action@v5
       with:
